priorities select is working

--- a/src/css/_media-queries.scss
+++ b/src/css/_media-queries.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 1280px) {
+	body {
+		background-size: auto;
+	}
+}
+
 @media screen and (max-width: 1100px) {
 	body .container {
 		width: 70%;
