--- a/src/css/_styles.scss
+++ b/src/css/_styles.scss
@@ -1,6 +1,7 @@
 body {
 	font-family: Helvetica, sans-serif;
 	background-image: url('/images/clouds.jpg');
+	background-size: cover;
 	h1 {
 		font-size: 1.75em;
 		color: white;
@@ -19,7 +20,7 @@ body {
 		width: 50%;
 		max-width: 800px;
 		margin: 0 auto;
-		margin-top: 50px;
+		margin-top: 15px;
 		padding: 5%;
 		.input-field {
 			width: 96%;
@@ -43,18 +44,37 @@ body {
 				opacity: .8;
 			}
 		}
-		select {
+		.select-overlay {
 			position: absolute;
 			top: 0;
-			background: none;
-			height: 41px;
-			border-radius: 0%;
-			border: none;
-			background-color: #aaa;
 			right: 70px;
-			color: white;
-			font-family: Helvetica, sans-serif;
+			z-index: 0;
+			background-color: #aaa;
+			color: #fff;
+			font-family: Helvetica,sans-serif;
+			padding: 10px 40px 10px 15px;
 			font-size: 18px;
+		  	&:after {
+			    content: "";
+			    width: 0;
+			    height: 0;
+			    border: 5px solid transparent;
+			    border-color: white transparent transparent transparent;
+			    position: absolute;
+			    top: 20px;
+			    right: 15px;
+		  	}
+		}
+
+		select {
+			z-index: 1;
+			opacity: 0;
+			position: absolute;
+			top: 0;
+			height: 41px;
+			width: 106px;
+			background: 0 0;
+			right: 70px;;
 		}
 	}
 
