--- a/src/css/_styles.scss
+++ b/src/css/_styles.scss
@@ -40,9 +40,10 @@ body {
 			right: 0px;
 			color: white;
 			font-size: 18px;
-			&:hover {
-				opacity: .8;
-			}
+			// &:hover {
+			// 	opacity: .8;
+			// 	width: 70px;
+			// }
 		}
 		.select-overlay {
 			position: absolute;
