--- a/src/css/_styles.scss
+++ b/src/css/_styles.scss
@@ -6,7 +6,7 @@ body {
 		font-size: 1.75em;
 		color: white;
 		text-align: center;
-		margin: 50px;
+		margin: 40px;
 	}
 	p {
 		font-size: 1em;
@@ -20,7 +20,6 @@ body {
 		width: 50%;
 		max-width: 800px;
 		margin: 0 auto;
-		margin-top: 15px;
 		padding: 5%;
 		.input-field {
 			width: 96%;
@@ -108,5 +107,10 @@ body {
 				}
 			}
 		}
+	}
+	.instructions {
+		text-align: center;
+		color: white;
+		padding: 30px;
 	}
 }
