--- a/src/css/_styles.scss
+++ b/src/css/_styles.scss
@@ -40,10 +40,6 @@ body {
 			right: 0px;
 			color: white;
 			font-size: 18px;
-			// &:hover {
-			// 	opacity: .8;
-			// 	width: 70px;
-			// }
 		}
 		.select-overlay {
 			position: absolute;
@@ -114,28 +110,6 @@ body {
 			cursor: pointer;
 		}
 	}
-	// .info {
-	// 	padding-left: 0;
-	// 	list-style: none;
-	// 	text-align: center;
-	// 	margin-bottom: 25px;
-	// 	margin-top: 50px;
-	// 	li {
-	// 		display: inline-block;
-	// 		margin: 0 2%;
-	// 		&:hover {
-	// 			cursor: pointer;
-	// 		}
-	// 	}
-	// 	a {
-	// 		color: white;
-	// 		text-decoration: none;
-	// 		border-bottom: 1px solid;
-	// 	}
-	// }
-	// .links {
-	// 	position: relative;
-	// }
 
 	footer {
 		position: fixed;
@@ -146,51 +120,49 @@ body {
 		opacity: 0.5;
 		color: #444;
 		text-align: center;
-		padding: 20px;
-		> a {
-			border-bottom: 1px solid;
+		padding: 16px;
+		.mini-footer a {
+			font-size: 18px;
 			&:hover {
 				cursor: pointer;
 			}
-			&:after {
-				@include triangle;
-				top: 20px;
-    			right: 15px;
-    			border-color: #444 transparent transparent;
+			.caret {
+				padding-left: 15px;
+				&:after {
+					@include triangle;
+					top: 22px;
+	    			border: 7px solid transparent;
+	    			border-color: #444 transparent transparent;
+				}
+				&.up {
+					&:after {
+						border-bottom: 7px solid #444;
+	    				border-top: 0px;
+					}
+				}
 			}
 		}
-		.about-modal {
+		.expanded-footer {
 			position: relative;
-			padding: 6%;
 			line-height: 26px;
 			background-color: white;
-			opacity: 0.5;
 			color: #444;
 			width: 55%;
 			margin: 0 auto;
-			// &:before {
-			// 	@include triangle;	
-			// }
-			.close {
-				position: absolute;
-				top: 10px;
-				right: 15px;
-				opacity: .8;
-				&:hover {
-					cursor: pointer;
-				}
-			}
+			font-size: 16px;
 		}
 		ul {
 			padding-left: 0;
 			list-style: none;
 			text-align: center;
+			margin-bottom: 0;
 			li {
 				display: inline-block;
 				padding: 0 10px;
 				font-size: 28px;
 				&:last-child {
 					font-size: 24px;
+					vertical-align: top;
 				}
 			}
 			a {
@@ -198,7 +170,12 @@ body {
 				color: #444;
 			}
 		}
-
+		.closed {
+			display: none;
+		}
+		.open {
+			display: block;
+		}
 
 	}
 }
