--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,14 +1,16 @@
-$headlineColor: #888;
-$bodyColor: #555;
+$white: #fff;
+$blackish: #444;
+$sans-serif: Helvetica, sans-serif;
 
 @mixin triangle {
     content: "";
     width: 0;
     height: 0;
     border: 5px solid transparent;
-    border-color: white transparent transparent transparent;
+    border-color: $white transparent transparent transparent;
     position: absolute;
 }
 
 @import "_styles";
+@import "_icons";
 @import "_media-queries";
