sort by priority persisting in localstorage

--- a/src/css/_styles.scss
+++ b/src/css/_styles.scss
@@ -26,11 +26,11 @@ body {
 			padding: 12px;
 			font-size: 15px;
 			border: none;
-			color: #aaa;
+			color: #939393;
 			letter-spacing: .01em;
 		}
 		input[type=submit] {
-			height: 41px;
+			height: 39px;
 			width: 70px;
 			border-radius: 0;
 			border: none;
