--- a/src/css/_styles.scss
+++ b/src/css/_styles.scss
@@ -105,6 +105,7 @@ body {
 		color: $white;
 		padding: 40px;
 		font-size: 15px;
+		line-height: 20px;
 		letter-spacing: .01em;
 		a {
 			border-bottom: 1px solid;
