add correct file path for prod

--- a/src/css/_icons.scss
+++ b/src/css/_icons.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('/fonts/icomoon.eot?uk5w3o');
-	src:url('/fonts/icomoon.eot?#iefixuk5w3o') format('embedded-opentype'),
-		url('/fonts/icomoon.woff?uk5w3o') format('woff'),
-		url('/fonts/icomoon.ttf?uk5w3o') format('truetype'),
-		url('/fonts/icomoon.svg?uk5w3o#icomoon') format('svg');
+	src:url('../../fonts/icomoon.eot?uk5w3o');
+	src:url('../../fonts/icomoon.eot?#iefixuk5w3o') format('embedded-opentype'),
+		url('../../fonts/icomoon.woff?uk5w3o') format('woff'),
+		url('../../fonts/icomoon.ttf?uk5w3o') format('truetype'),
+		url('../../fonts/icomoon.svg?uk5w3o#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
