--- a/src/css/_styles.scss
+++ b/src/css/_styles.scss
@@ -1,6 +1,6 @@
 body {
 	font-family: $sans-serif;
-	background-image: url('/images/clouds.jpg');
+	background-image: url('../../images/clouds.jpg');
 	background-size: cover;
 	color: $blackish;
 	text-align: center;
