--- a/src/css/_styles.scss
+++ b/src/css/_styles.scss
@@ -7,9 +7,9 @@ body {
 	h1 {
 		font-size: 28px;
 		color: $white;
-		margin: 40px;
 		font-weight: 400;
 		letter-spacing: .01em;
+		margin-bottom: 10px;
 	}
 	form {
 		position: relative;
@@ -66,6 +66,22 @@ body {
 			width: 106px;
 			background: 0 0;
 			right: 70px;;
+		}
+		.dashboard-data-container {
+			color: $white;
+			text-align: left;
+			margin-bottom: 30px;
+			.time-date-container, .weather-location-container {
+				display: inline-block;
+				width: 49%;
+			}
+			.weather-location-container {
+				text-align: right;
+			}
+			p {
+				font-style: italic;
+				font-weight: 300;
+			}
 		}
 	}
 
