--- a/src/css/_styles.scss
+++ b/src/css/_styles.scss
@@ -2,11 +2,10 @@ body {
 	font-family: $sans-serif;
 	background-image: url('../../images/clouds.jpg');
 	background-size: cover;
-	color: $blackish;
+	color: $white;
 	text-align: center;
 	h1 {
 		font-size: 28px;
-		color: $white;
 		font-weight: 400;
 		letter-spacing: .01em;
 		margin-bottom: 10px;
@@ -67,21 +66,22 @@ body {
 			background: 0 0;
 			right: 70px;;
 		}
-		.dashboard-data-container {
-			color: $white;
-			text-align: left;
-			margin-bottom: 30px;
-			.time-date-container, .weather-location-container {
-				display: inline-block;
-				width: 49%;
-			}
-			.weather-location-container {
-				text-align: right;
-			}
-			p {
-				font-style: italic;
-				font-weight: 300;
-			}
+	}
+	.dashboard-data-container {
+		text-align: left;
+		margin-bottom: 30px;
+		.time-date-container {
+			display: inline-block;
+			width: 59%;
+		}
+		.weather-location-container {
+			text-align: right;
+			display: inline-block;
+			width: 39%;
+		}
+		p {
+			font-style: italic;
+			font-weight: 300;
 		}
 	}
 
@@ -102,12 +102,10 @@ body {
 				position: absolute;
 				right: 2.5%;
 				top: 16px;
-				color: $white;
 			}
 			i {
 				margin-left: 15px;
 				font-size: 20px;
-				// font-weight: bold;
 				&:hover {
 					cursor: pointer;
 				}
@@ -135,6 +133,7 @@ body {
 		left: 0;
 		right: 0;
 		background-color: $white;
+		color: $blackish;
 		opacity: 0.5;
 		padding: 16px;
 		.mini-footer a {
@@ -161,8 +160,6 @@ body {
 		.expanded-footer {
 			position: relative;
 			line-height: 26px;
-			background-color: $white;
-			color: $blackish;
 			width: 55%;
 			margin: 0 auto;
 			font-size: 14px;
@@ -175,9 +172,6 @@ body {
 				display: inline-block;
 				padding: 0 10px;
 				font-size: 28px;
-				&:last-child {
-					font-size: 28px;
-				}
 			}
 			a {
 				text-decoration: none;
