add loading icon for weather

--- a/app/views/todoList.html
+++ b/app/views/todoList.html
@@ -1,4 +1,5 @@
 <section ng-controller="todoListCtrl as t" class="todo-list-container">
+  <hello-world></hello-world>
     <form role="form" ng-submit="t.addTodo(todo)">
         <input class="input-field" type="text" ng-model="todo.item" placeholder="What's on your todo list?" required/>
         <div class="form-controls">
